...
@Preview
@Composable
fun PreviewNutrientBarInfo() {
    NutrientBarInfo(
        value = 100,
        goal = 200,
        name = "Carbs",
        color = MaterialTheme.colors.primary
    )
}
